--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,6 @@
 .background {
   background-color: #000;
-  background-image: url(/images/cathedral-color.png);
+  background-image: url(/images/floor-plan.png);
   position: relative;
 }
 
@@ -27,6 +27,10 @@
   z-index: 1;
 }
 
+.printout {
+  display: none;
+}
+
 .searchBar {
   border-radius: 6px;
   display: flex;
@@ -37,4 +41,14 @@
   transform: translate(-50%);
   width: 400px;
   z-index: 1;
+}
+
+@media print {
+  .printout {
+    display: block;
+  }
+
+  .root {
+    display: none;
+  }
 }
