--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,6 @@
-html,
-body {
-  background: #000;
+body,
+html {
+  background-color: #000;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   margin: 0;
@@ -14,4 +14,11 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+@media print {
+  body,
+  html {
+    background-color: unset;
+  }
 }
