--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ html {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   margin: 0;
+  overflow: hidden;
   padding: 0;
 }
 
