--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,19 @@
 body,
 html {
-  background-color: rgba(0, 0, 0, 0.75);
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  height: 100%;
   margin: 0;
   overflow: hidden;
   padding: 0;
+}
+
+#__next {
+  height: 100%;
+}
+
+#home {
+  background-color: rgba(0, 0, 0, 0.75);
 }
 
 @media print {
@@ -16,6 +24,7 @@ html {
 
   #form,
   #home {
+    background-color: unset;
     display: none;
   }
 }
