--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -1,30 +1,3 @@
-body,
-html {
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  height: 100%;
-  margin: 0;
-  overflow: hidden;
-  padding: 0;
-}
-
-#__next {
-  height: 100%;
-}
-
-#home {
-  background-color: rgba(0, 0, 0, 0.75);
-}
-
-@media print {
-  body,
-  html {
-    background-color: unset;
-  }
-
-  #form,
-  #home {
-    background-color: unset;
-    display: none;
-  }
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
